--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/analytics": "^1.4.1",
     "clsx": "^2.1.1",
     "next": "14.2.16",
+    "nextjs-toploader": "^3.7.15",
     "react": "^18",
     "react-dom": "^18"
   },
